SM-12 Gruppe bearbeiten/SM-10 Gruppe von Person anlegen

--- a/angular.json
+++ b/angular.json
@@ -102,5 +102,12 @@
       }
     }
   },
-  "defaultProject": "SOG"
+  "defaultProject": "SOG",
+  "styles": [
+    "node_modules/bootstrap/dist/css/bootstrap.min.css"
+  ],
+  "scripts": [
+    "node_modules/bootstrap/dist/js/bootstrap.min.js"
+  ]
 }
+
