--- a/angular.json
+++ b/angular.json
@@ -96,9 +96,12 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node-modules/bootstap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootdtrap/dist/js/bootstrap.min.js"
+            ]
           }
         }
       }
