--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-extensions/password-strength": "^10.1.1",
     "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "~13.0.0",
     "@angular/cdk": "^13.3.4",
@@ -22,6 +23,9 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
+    "ng-csv": "^0.3.6",
+    "ngx-csv": "^0.3.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -30,6 +34,7 @@
     "@angular-devkit/build-angular": "^13.3.3",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
