--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~13.0.0",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
+    "konva": "^8.3.8",
     "ng-csv": "^0.3.6",
     "ngx-csv": "^0.3.2",
     "rxjs": "~7.4.0",
