--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "~13.0.0",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "konva": "^8.3.8",
     "ng-csv": "^0.3.6",
     "ngx-csv": "^0.3.2",
