--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jspdf": "^2.5.1",
     "konva": "^8.3.8",
     "ng-csv": "^0.3.6",
+    "ngx-color": "^7.3.3",
     "ngx-csv": "^0.3.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
