--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@visurel/iconify-angular": "^11.0.0",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
     "html2canvas": "^1.4.1",
@@ -29,6 +30,7 @@
     "konva": "^8.3.8",
     "ng-csv": "^0.3.6",
     "ngx-color": "^7.3.3",
+    "ngx-color-picker": "^12.0.1",
     "ngx-csv": "^0.3.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -38,6 +40,7 @@
     "@angular-devkit/build-angular": "^13.3.3",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
+    "@iconify/ember": "^1.1.1",
     "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.14",
