--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~13.0.0",
     "@visurel/iconify-angular": "^11.0.0",
     "bootstrap": "^5.1.3",
+    "core-js": "^3.22.8",
     "crypto-js": "^4.1.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
