--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.22.8",
     "crypto-js": "^4.1.1",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "konva": "^8.3.8",
@@ -44,6 +45,7 @@
     "@angular/compiler-cli": "~13.0.0",
     "@iconify/ember": "^1.1.1",
     "@types/crypto-js": "^4.1.1",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
