--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~13.0.0",
     "@visurel/iconify-angular": "^11.0.0",
     "bootstrap": "^5.1.3",
+    "convert-csv-to-json": "^1.3.3",
     "core-js": "^3.22.8",
     "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
@@ -35,6 +36,7 @@
     "ngx-color": "^7.3.3",
     "ngx-color-picker": "^12.0.1",
     "ngx-csv": "^0.3.2",
+    "ngx-papaparse": "^5.1.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
